<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="viewmodel"
            type="com.ql.giantbomb.search.SearchViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/colorLightBlackTrans"
            android:elevation="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/medium_margin"
                android:fontFamily="sans-serif-smallcaps"
                android:paddingStart="@dimen/small_margin"
                android:shadowColor="@color/colorAccent"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="1.0"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="48sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSearchGames"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/small_margin"
                android:elevation="@dimen/medium_margin"
                android:maxLines="1"
                android:inputType="text"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:gravity="center_vertical"
                android:hint="@string/default_key"
                android:imeOptions="actionSearch"
                app:layout_constraintEnd_toStartOf="@id/btGo"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btGo"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_button"
                android:text="GO!"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@id/etSearchGames"
                app:layout_constraintTop_toTopOf="@id/etSearchGames" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGamesList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorBlack"
            android:clipToPadding="false"
            android:paddingTop="120dp"
            android:paddingBottom="@dimen/medium_margin"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            app:nft_items="@{viewmodel.itemsNFTs}"
            tools:listitem="@layout/item_game" />


        <LinearLayout
            android:id="@+id/noTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{viewmodel.empty ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/noNFTsIcon"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:src="@drawable/opened_white_box" />

            <TextView
                android:id="@+id/noNFTsMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="@dimen/medium_padding"
                android:text="@{viewmodel.emptyMessage}" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>

